reduce compile time warnings